test/success/integration/_succ_expr_mod_1.hs
x :: Int
x = 4 mod 3
main = print "hello"