test/fail/integration/_fail_grammar_expr_times_1.hs
x :: Int
x = jl * 4
main = print "hello"